# futStats

./: README.md  plots.ipynb  pyproject.toml  requirements.txt  teste.ipynb
fut_stats/: config.py  main.py  routes.py  services.py
fut_stats/models/: models.py
fut_stats/utils/: convert_csv_stats_to_match.py  create_matches.py  create_players.py  fut_2023.csv  fut_2023.json
